Finished Week 4/5 of lectures for ProComp

--- a/modules/pc.tex
+++ b/modules/pc.tex
@@ -1,5 +1,110 @@
-\section{Computer Misuse}
+\section{Legal Perspectives}
+\subsection{Criminal VS Civil Law}
+\paragraph{Criminal Law}
+\begin{itemize}
+	\item Designed to protect society from wrong doers
+	\item Police investigation and arrest
+	\item CPS proceeds with prosecution
+	\item Innocent until proven guilty "beyond reasonable doubt" (Standard of Proof)
+\end{itemize}
+\paragraph{Civil Law}
+\begin{itemize}
+	\item Settling disputes between entities
+	\item Litigation must be brought out by the plaintiff against the defendant
+	\item Both parties must present arguments
+	\item Decision based on "balance of probabilities" (Standard of Proof)
+	\item Usual objective is to obtain damages or injunction
+\end{itemize}
+\paragraph{Tort} In common law, a tort is a civil wrong. A tort isn't necessarily illegal, but some how caused harm to a person's rights. Torts are usually re-addressed through damages awarded. There different types of torts such as \textbf{Negligence}, \textbf{Nuisance}, and \textbf{Defamation}, but negligence is the most common. There are four elements that must be present/successful for a negligence tort to go through. These are:
+\begin{enumerate}
+	\item The negligence party owed a duty of care to the victim.
+	\item There was a breach of the duty of care.
+	\item Causation
+	\item Damage or injury occurred
+\end{enumerate}
+\subsection{Legislation}
+\paragraph{Body of Law} A "Legislative Act of Parliament" can create, amend, repeal any new or existing law. The process is outlined as such:
+\begin{itemize}
+	\item Bill is drafted
+	\item Bill is introduced to House of Commons or Lords (usually both)
+	\item Several stages of reading and amendment
+	\item Bill becomes an act following Royal Assent
+\end{itemize}
+\paragraph{European Convention on Human Rights} Drafted in 1950, signed in 1953. Human Rights are sort of considered a good thing; this allows individuals to have an active role in International Law. Of particular interest to us are the following articles (though this might become irrelevant to the UK soon enough):
+\begin{itemize}
+	\item Article 5 - Liberty and Security
+	\item Article 7 - Retrospectivity
+	\item Article 8 - Privacy
+	\item Article 10 - Expression
+\end{itemize}
+\paragraph{Computer Misuse Act} There was no act to punish people misusing computers, such as when Gold and Schifreen gained unauthorised access to BT's service and got access to Prince Philip's email. Charging them under the Forgery and Counterfeiting Act wasn't valid, so the computer misuse act was created to prevent similar future issues. The act has three offences;
+\begin{enumerate}
+	\item Unauthorized access to a computer - punishable by £5000 or 6 month imprisonment
+	\item Unauthorized access to a computer to commit a serious crime - punishable by an unlimited fine or up to 5 years imprisonment
+	\item Unauthorized modification of the contents of a computer - punishable by an unlimited fine or up to 5 years imprisonment
+\end{enumerate}
+Malicious intent to commit crimes/offences is necessary to be tried under the computer misuse act (the crime does not necessarily to finish happening). A person can only be tried guilty if they or the computer in questions is in the UK at the time of offence.
+\paragraph{Review of CMA (2004)} Later on, the Computer Misuse Act was reviewed to cover more ground. Added an offence of "impairing access to data", mainly to cover DDoS attacks, and increased tariff for unauthorized access to two years. There were still some problems with the CMA; it had difficulty dealing with procurement of malware for personal use, as it required proof it was obtained to commit a CMA offence, can individuals can be prosecuted only if there is a significant link to the UK.
+\paragraph{Serious Crime Act 2015} This bill in 2015 was made to alleviate some pressures from the EU and to fix the aforementioned issues with the CMA with two amendments;
+\begin{enumerate}
+	\item 3ZA - Unauthorised acts causing, or creating risk of, serious damage (via computer) will end you up in maximum 14 years of imprisonment or, if human life or serious national security was was risk, then there is a possibility of life imprisonment.
+	\item 3A - Making, supplying or obtaining articles for use in offence under 1, 3 and 3ZA. An article is a program or delta held in electronic form, and being accused of this crime gets you a summary convictions up two 12 months.
+\end{enumerate}
+
 \section{GDPR}
+\subsection{Data Protection}
+\paragraph{Data Protection Act (1984)} There were major concerns about large amounts of data being collected about people, and data was being used for reasons other than why it was collected. Thanks to a European Council convention, some principles regarding data collection, use and storage were set. The UK made the 1984 DPA designed to protect individuals against
+\begin{itemize}
+	\item The use of inaccurate/incomplete personal information
+	\item The use of information by unauthorized persons
+	\item The use of information for reasons other than it was collected for.
+\end{itemize}
+\paragraph{Data Protection Act (1998)} This was a major revision over the 1984 DPA. It added some definitions that are valid to us now.
+\begin{itemize}
+	\item Data - information that is being processed automatically or is collected with that intention or recorded as part of a "relevant filing system"
+	\item Processing - Obtaining, recording, or holding data or carrying out any operation on it
+	\item Data Controller - who controls why or how the data is processed
+	\item Data Processor - anybody who processes the data on behalf of the controller
+	\item Personal Data - data which relates to a living person who can be identified using this data
+	\item Sensitive Data - Personal data relating to racial, ethnic, religious, political, sexual (Etc.) aspects of a person
+\end{itemize}
+\paragraph{Data Protection Act (2018)} This new act applies the EU's new GDPR standards and prepares Britain's data protection for Brexit. It covers all general data, law enforcement data and national security data. It additionally modifies the GDPR to make it work for the UK with regards to academic research, financial services and child protection.
+\subsection{GDPR}
+\paragraph{GDPR Principles}
+\begin{itemize}
+	\item \textbf{Lawfulness} - Personal data shall be processed lawfully and fairly in a transparent manner in relation to the data subject. The subject must have given consent to be lawful.
+	\item \textbf{Purpose} - Personal data shall be collected for specified, explicit and legitimate purposes. Personal data will not be further processed in a manner incompatible with those purposes.
+	\item \textbf{Data Minimisation} - Personal data shall be adequate, relevant and limited to what is necessary in relation to the purpose for which they are processed.
+	\item \textbf{Accuracy} - Personal data shall be accurate and, where necessary, kept up to date. Reasonable steps must be taken to ensure that inaccurate personal data are erased and rectified.
+	\item \textbf{Storage} - Personal data shall be kept in a form which permits identification of data subjects for no longer than is necessary. Data can be stored for longer periods in public interest or for scientific, historical or statistical purpose. Procedures for data deletion must be rigorous and specified. 
+	\item \textbf{Access} - Not a GDPR Principle, but important. Controller must make processing clear to the data subject, and the data subject has the right to obtain confirmation about if their personal data is being processed.
+	\item \textbf{Security} - Personal data shall be processed in a manner that ensures appropriate security of personal data; protection against unauthorised or unlawful processing, accidental loss, destruction or damage. 
+	\item \textbf{Accountability} - The controller shall be responsible for, and be able to demonstrate, compliance with the principles.
+\end{itemize}
+\paragraph{GDPR Rights of the Individual}
+\begin{enumerate}
+	\item Right to be informed - Why, why and how your data is being processed
+	\item Right of access - request all personal data from a controller (usually for free)
+	\item Right to rectification - incorrect info can be corrected
+	\item Right to erasure - all data erased from systems without delay
+	\item Right to restrict processing - cease processing and leave data alone
+	\item Right to data portability - receive electronic version of all data you have submitted
+	\item Right to object - object to processing such as direct marketing and profiling
+	\item Rights in relation to automatic decision making - not to be a subject to decision based upon profiling
+\end{enumerate}
+\subsection{Regulation of Investigatory Powers Act (2000)} This is a framework for lawful interception of computer, telephone and postal messages. ISPs can monitor communications without consent provided to:
+\begin{itemize}
+	\item Establish facts
+	\item Ensure company regulations are being complied with
+	\item Ascertain standards which ought to be achieved
+	\item Prevent crime
+	\item Investigate unauthorised use of telecommunications systems
+	\item Ensure effective operation of system
+	\item Find out whether comms are business or personal
+	\item Monitor but not record calls to confidential counseling helplines run free of charge by the business
+\end{itemize}
+The act allows government agencies the right to ask for interception warrants ot monitor comms to or from specific entities. There has been updates to this act; a 2014 extension to indiscriminate retention of emails and electronic communications, and the 2016 extension to force ISPs to store web pages visited by IP.
+\subsection{Freedom of Information Act} Act to provide clear rights of access of information held by bodies in the public sector - with certain conditions and exemptions. Where information is exempted from disclosure, there is a duty on public body to disclose where, in the public body's view, the public interest in disclosure outweighs the public interest in maintaining exemption. This is monitored by the Information Commissioner and "Informational Tribunal" who approve the adapted scheme on an entity basis. Information has a wide meaning, such as minutes of a meeting, but it does not cover personal data (As that is already protected by the GDPR and FOI requests must be answered within one month, and are handled differently from GDPR requests).
 \section{Liability}
 \section{Intellectual Property}
 \section{Huamn Resources}
